# stocksCorrelation

./: .gitignore  API_GUIDE.md  CLAUDE.md  Makefile  PROJECT_STRUCTURE.md  README.md  config.yaml  main.py  mypy.ini  pyproject.toml  requirements.txt  run.py  run_multi_strategy.bat  run_multi_strategy.sh  run_paper_trading.bat  run_paper_trading.sh  yftesting.py
.claude/: settings.local.json
api/: main.py
api/models/: __init__.py  correlations.py  positions.py  signals.py  trades.py
api/routers/: __init__.py  correlations.py  monitoring.py  operations.py  positions.py  signals.py  trades.py
api/services/: __init__.py  correlations_service.py  positions_service.py
configs/: default.yaml
data/: sp500_tickers.txt  sp500_top50.csv
docs/: AUTOMATION_GUIDE.md  PAPER_TRADING_GUIDE.md
notebooks/: README.md  data_analysis.ipynb
scripts/: backtest.py  build_windows.py  close_positions.py  export_to_excel.py  gridsearch.py  live.py  live_daily.py  monitor.py  paper_trade_daily.py  preprocess.py  run_multi_strategy_paper_trading.py
src/: run.py
src/api/: __init__.py  main.py
src/api/models/: monitoring.py
src/api/routers/: correlations.py  monitoring.py  operations.py  positions.py  signals.py  trades.py
src/api/services/: monitoring_service.py  signals_service.py  trades_service.py
src/cli/: __init__.py  backtest.py  daily_runner.py  export_to_excel.py  paper_trade_daily.py  run_multi_strategy_paper_trading.py
src/core/: config.py  constants.py  data_loader.py  error_decorator.py  logger.py
src/dataio/: __init__.py  fetch.py  live_append.py  prep.py
src/evals/: correlation_matrix.py  metrics.py
src/modeling/: __init__.py  similarity.py  vote.py  windows.py
src/trading/: __init__.py  engine.py  hedging.py  monitor.py  paper_trading.py
tests/: test_backtest.py  test_cli_gridsearch.py  test_cli_preprocess.py  test_close.py  test_evals.py  test_fetch_prep.py  test_hedge.py  test_live_daily.py  test_monitor.py  test_similarity.py  test_vote.py  test_windows.py
